[workspace]
resolver = "2"
members = [
  "ntex",
  "ntex-bytes",
  "ntex-codec",
  "ntex-io",
  "ntex-http",
  "ntex-router",
  "ntex-rt",
  "ntex-net",
  "ntex-server",
  "ntex-service",
  "ntex-tls",
  "ntex-macros",
  "ntex-util",

  "ntex-compio",
  "ntex-tokio",
]

[workspace.package]
authors = ["ntex contributors <team@ntex.rs>"]
repository = "https://github.com/ntex-rs/ntex"
documentation = "https://docs.rs/ntex/"
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.75"

[patch.crates-io]
ntex = { path = "ntex" }
ntex-bytes = { path = "ntex-bytes" }
ntex-codec = { path = "ntex-codec" }
ntex-io = { path = "ntex-io" }
ntex-net = { path = "ntex-net" }
ntex-http = { path = "ntex-http" }
ntex-router = { path = "ntex-router" }
ntex-rt = { path = "ntex-rt" }
ntex-server = { path = "ntex-server" }
ntex-service = { path = "ntex-service" }
ntex-tls = { path = "ntex-tls" }
ntex-macros = { path = "ntex-macros" }
ntex-util = { path = "ntex-util" }

ntex-compio = { path = "ntex-compio" }
ntex-tokio = { path = "ntex-tokio" }

[workspace.dependencies]
async-channel = "2"
async-task = "4.5.0"
atomic-waker = "1.1"
base64 = "0.22"
core_affinity = "0.8"
bitflags = "2"
cfg_aliases = "0.2.1"
cfg-if = "1.0.0"
crossbeam-channel = "0.5.8"
crossbeam-queue = "0.3.8"
env_logger = { version = "0.11", default-features = false }
futures-core = { version = "0.3", default-features = false, features = ["alloc"] }
futures-util = { version = "0.3.29", default-features = false, features = ["alloc"] }
futures-timer = "3.0"
fxhash = "0.2.1"
libc = "0.2.164"
log = "0.4"
oneshot = "0.1"
pin-project-lite = "0.2"
polling = "3.8.0"
rand = "0.9"
regex = { version = "1.11", default-features = false, features = ["std"] }
rustls-pemfile = "2"
nohash-hasher = "0.2.0"
nanorand = { version = "0.8", default-features = false, features = [
    "std",
    "wyrand",
    "entropy"
] }
scoped-tls = "1.0.1"
serde = { version = "1", features = ["derive"] }
slab = "0.4.9"
socket2 = "0.5.6"
windows-sys = "0.52.0"
time = "0.3"
thiserror = "2"
webpki-roots = "1.0"
