[package]
name = "actix-connect"
version = "0.1.3"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix Connector - tcp connector service"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-connect/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"
workspace = ".."

[package.metadata.docs.rs]
features = ["ssl", "uri"]

[lib]
name = "actix_connect"
path = "src/lib.rs"

[features]
default = ["uri"]

# openssl
ssl = ["openssl", "tokio-openssl"]

# support http::Uri as connect address
uri = ["http"]

[dependencies]
actix-service = "0.3.6"
actix-codec = "0.1.2"
actix-utils = "0.3.5"
derive_more = "0.14.0"
either = "1.5.1"
futures = "0.1.25"
http = { version = "0.1.16", optional = true }
log = "0.4"
tokio-tcp = "0.1.3"
tokio-current-thread = "0.1.5"
trust-dns-resolver = { version="0.11.0-alpha.3", default-features = false }

# openssl
openssl = { version="0.10", optional = true }
tokio-openssl = { version="0.3", optional = true }

[dev-dependencies]
bytes = "0.4"
actix-connect = { path=".", features=["ssl"] }
actix-test-server = { version="0.2.0", features=["ssl"] }
actix-server-config = "0.1.0"
actix-utils = "0.3.4"
tokio-tcp = "0.1"