[package]
name = "actix-connector"
version = "0.3.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix Connector - tcp connector service"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-net/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"
workspace = ".."

[package.metadata.docs.rs]
features = ["ssl"]

[lib]
name = "actix_connector"
path = "src/lib.rs"

[features]
default = []

# openssl
ssl = ["openssl", "tokio-openssl"]

[dependencies]
actix-service = "0.3.0"
actix-codec = "0.1.0"
futures = "0.1"
tokio-tcp = "0.1"
tokio-current-thread = "0.1"
trust-dns-resolver = { version="0.11.0-alpha.2", default-features = false }

# openssl
openssl = { version="0.10", optional = true }
tokio-openssl = { version="0.3", optional = true }
