[package]
name = "actix-ioframe"
version = "0.3.0-alpha.3"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix framed service"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-ioframe/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"
workspace = ".."

[lib]
name = "actix_ioframe"
path = "src/lib.rs"

[dependencies]
actix-service = "1.0.0"
actix-codec = "0.2.0"
actix-utils = "1.0.0-alpha.2"
actix-rt = "1.0.0-alpha.2"
bytes = "0.5"
either = "1.5.2"
futures = "0.3.1"
pin-project = "0.4.6"
log = "0.4"

[dev-dependencies]
actix-connect = "1.0.0-alpha.2"
actix-testing = "1.0.0-alpha.2"
