[workspace]
members = [
  "actix-codec",
  "actix-connect",
  "actix-rt",
  "actix-macros",
  "actix-service",
  "actix-server",
  "actix-testing",
  "actix-threadpool",
  "actix-tls",
  "actix-tracing",
  "actix-utils",
  "router",
  "string",
]

[patch.crates-io]
actix-codec = { path = "actix-codec" }
actix-connect = { path = "actix-connect" }
actix-rt = { path = "actix-rt" }
actix-macros = { path = "actix-macros" }
actix-server = { path = "actix-server" }
actix-service = { path = "actix-service" }
actix-testing = { path = "actix-testing" }
actix-threadpool = { path = "actix-threadpool" }
actix-tls = { path = "actix-tls" }
actix-tracing = { path = "actix-tracing" }
actix-utils = { path = "actix-utils" }
actix-router = { path = "router" }
bytestring = { path = "string" }
