[package]
name = "actix-server-config"
version = "0.1.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix server config utils"
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "actix_server_config"
path = "src/lib.rs"

[package.metadata.docs.rs]
features = ["ssl", "rust-tls"]

[features]
default = []

# openssl
ssl = ["tokio-openssl"]

# rustls
rust-tls = ["rustls", "tokio-rustls"]

[dependencies]
futures = "0.1.25"
tokio-io = "0.1.12"
tokio-tcp = "0.1"
tokio-openssl = { version="0.3.0", optional = true }
rustls = { version = "0.15.2", optional = true }
tokio-rustls = { version = "0.9.1", optional = true }
