[package]
name = "actix-server-config"
version = "0.1.2"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix server config utils"
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "actix_server_config"
path = "src/lib.rs"

[package.metadata.docs.rs]
features = ["ssl", "rust-tls", "uds"]

[features]
default = []

# openssl
ssl = ["tokio-openssl"]

# rustls
rust-tls = ["rustls", "tokio-rustls"]

# unix domain sockets
uds = ["tokio-uds"]

[dependencies]
futures = "0.1.25"
tokio-io = "0.1.12"
tokio-tcp = "0.1"
tokio-openssl = { version="0.3.0", optional = true }
rustls = { version = "0.16.0", optional = true }
tokio-rustls = { version = "0.10.0", optional = true }
tokio-uds = { version="0.2.5", optional = true }
