[package]
name = "actix-server-config"
version = "0.3.0-alpha.1"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix server config utils"
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "actix_server_config"
path = "src/lib.rs"

[package.metadata.docs.rs]
features = ["openssl"] #, "rustls"]

[features]
default = []
openssl = ["tokio-openssl"]
# rustls = ["tokio-rustls"]

[dependencies]
actix-codec = "0.2.0-alpha.1"
tokio-net = { version = "=0.2.0-alpha.6", features = ["tcp", "uds"] }
tokio-openssl = { version = "0.4.0-alpha.6", optional = true }
# tokio-rustls = { version = "0.12.0-alpha.8", optional = true }
# tokio-rustls = { git = "https://github.com/quininer/tokio-rustls.git", branch = "tokio-0.2", optional = true }
