[package]
name = "actix-service"
version = "1.0.4"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix service"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-service/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
edition = "2018"

[badges]
travis-ci = { repository = "actix/actix-service", branch = "master" }
codecov = { repository = "actix/actix-service", branch = "master", service = "github" }

[lib]
name = "actix_service"
path = "src/lib.rs"

[dependencies]
futures-util = "0.3.1"
pin-project = "0.4.6"

[dev-dependencies]
actix-rt = "1.0.0"
