[package]
name = "actix-testing"
version = "1.0.0-alpha.3"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix testing utils"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-testing/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[lib]
name = "actix_testing"
path = "src/lib.rs"

[dependencies]
actix-rt = "1.0.0-alpha.3"
actix-macros = "0.1.0"
actix-server = "1.0.0-alpha.3"
actix-service = "1.0.0"

log = "0.4"
net2 = "0.2"
futures = "0.3.1"
