[package]
name = "actix-tls"
version = "1.0.0-alpha.3"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix tls services"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-tls/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
edition = "2018"
workspace = ".."

[package.metadata.docs.rs]
features = ["openssl", "rustls", "nativetls"]

[lib]
name = "actix_tls"
path = "src/lib.rs"

[features]
default = []

# openssl
openssl = ["open-ssl", "tokio-openssl"]

# rustls
rustls = ["rust-tls", "webpki", "webpki-roots", "tokio-rustls"]

# nativetls
nativetls = ["native-tls", "tokio-tls"]

[dependencies]
actix-service = "1.0.0"
actix-codec = "0.2.0"
actix-utils = "1.0.0"
actix-rt = "1.0.0"
derive_more = "0.99.2"
either = "1.5.2"
futures = "0.3.1"
log = "0.4"

# openssl
open-ssl = { version="0.10", package = "openssl", optional = true }
tokio-openssl = { version = "0.4.0", optional = true }

# rustls
rust-tls = { version = "0.16.0", package = "rustls", optional = true }
webpki = { version = "0.21", optional = true }
webpki-roots = { version = "0.17", optional = true }
tokio-rustls = { version = "0.12.0", optional = true }

# native-tls
native-tls = { version="0.2", optional = true }
tokio-tls = { version="0.3", optional = true }

[dev-dependencies]
bytes = "0.5"
actix-testing = { version="1.0.0-alpha.3" }
