[package]
name = "actix-tower"
version = "0.1.0"
authors = ["Nikolay Kim <fafhrd91@gmail.com>", "Marcus Griep <marcus@griep.us>"]
description = "Actix Tower"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-tower/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"
workspace = ".."

[badges]
travis-ci = { repository = "actix/actix-tower", branch = "master" }
appveyor = { repository = "actix/actix-net" }
codecov = { repository = "actix/actix-tower", branch = "master", service = "github" }

[lib]
name = "actix_tower"
path = "src/lib.rs"

[dependencies]
actix-service = "0.3.6"
futures = "0.1.24"
tower-service = "0.2.0"

