[package]
name = "actix-tracing"
version = "0.1.0"
authors = ["Rajasekharan Vengalil <avranju@gmail.com>"]
description = "Support for tokio tracing with Actix services"
keywords = ["network", "framework", "tracing"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-tracing/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
edition = "2018"

[lib]
name = "actix_tracing"
path = "src/lib.rs"

[dependencies]
actix-service = "1.0.4"
futures-util = "0.3.1"
tracing = "0.1"
tracing-futures = "0.2"

[dev_dependencies]
actix-rt = "1.0"
slab = "0.4"