[package]
name = "actix-utils"
version = "1.0.0-alpha.3"
authors = ["Nikolay Kim <fafhrd91@gmail.com>"]
description = "Actix utils - various actix net related services"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://actix.rs"
repository = "https://github.com/actix/actix-net.git"
documentation = "https://docs.rs/actix-utils/"
categories = ["network-programming", "asynchronous"]
license = "MIT/Apache-2.0"
exclude = [".gitignore", ".travis.yml", ".cargo/config", "appveyor.yml"]
edition = "2018"
workspace = ".."

[lib]
name = "actix_utils"
path = "src/lib.rs"

[dependencies]
actix-service = "1.0.0"
actix-rt = "1.0.0-alpha.3"
actix-codec = "0.2.0"
bytes = "0.5.2"
either = "1.5.2"
futures = "0.3.1"
pin-project = "0.4.6"
log = "0.4"
