[package]
name = "ntex-async-std"
version = "0.3.0"
authors = ["ntex contributors <team@ntex.rs>"]
description = "async-std intergration for ntex framework"
keywords = ["network", "framework", "async", "futures"]
homepage = "https://ntex.rs"
repository = "https://github.com/ntex-rs/ntex.git"
documentation = "https://docs.rs/ntex-rt-async-std/"
categories = ["network-programming", "asynchronous"]
license = "MIT"
edition = "2021"

[lib]
name = "ntex_async_std"
path = "src/lib.rs"

[dependencies]
ntex-bytes = "0.1.19"
ntex-io = "0.3.0"
ntex-util = "0.3.0"
async-oneshot = "0.5.0"
log = "0.4"
pin-project-lite = "0.2"
async-std = { version = "1", features = ["unstable"] }
